tests/baselines/reference/genericCallWithObjectTypeArgsAndConstraints5.errors.txt
tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgsAndConstraints5.ts(22,24): error TS2345: Argument of type 'C' is not assignable to parameter of type 'T'.


==== tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgsAndConstraints5.ts (1 errors) ====
    // Generic call with constraints infering type parameter from object member properties
    
    class C {
        x: string;
    }
    
    class D {
        x: string;
        y: string;
    }
    
    function foo<T, U extends T>(t: T, t2: U) {
        return (x: T) => t2;
    }
    
    var c: C;
    var d: D;
    var r2 = foo(d, c); // the constraints are self-referencing, no downstream error
    var r9 = foo(() => 1, () => { }); // the constraints are self-referencing, no downstream error
    
    function other<T, U extends T>() {
        var r5 = foo<T, U>(c, d); // error
                           ~
!!! error TS2345: Argument of type 'C' is not assignable to parameter of type 'T'.
    }
    